refactoring, add comments and update AdMob